--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Professor: @ViewData["Professor"]</p>
+
+<address>
+    <p><strong>More information </strong><a href="ivanildo@belemtech.com.br">@ViewData["Email"]</a></p>
+</address>
